-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
This issue was mentioned on the mailing list, but we just hit it ourselves attempting to build Lustre 2.7 on SLES 12 with OFED 3.18.
[ 128s] In file included from /usr/src/kernel-modules-ofed/x86_64/cray_ari_s/include/linux/compat-2.6.h:7:0, [ 128s] from /home/abuild/rpmbuild/BUILD/cray-lustre/lnet/klnds/o2iblnd/o2iblnd.h:67, [ 128s] from /home/abuild/rpmbuild/BUILD/cray-lustre/lnet/klnds/o2iblnd/o2iblnd.c:42: [ 128s] /usr/src/kernel-modules-ofed/x86_64/cray_ari_s/include/linux/../../compat/config.h:398:0: error: "PACKAGE_BUGREPORT" redefined [-Werror] [ 128s] #define PACKAGE_BUGREPORT "http://bugs.openfabrics.org/bugzilla" [ 128s] ^ [ 128s] In file included from <command-line>:0:0: [ 128s] /home/abuild/rpmbuild/BUILD/cray-lustre/config.h:558:0: note: this is the location of the previous definition [ 128s] #define PACKAGE_BUGREPORT "https://jira.hpdd.intel.com/" [ 128s] ^ [ 128s] In file included from /usr/src/kernel-modules-ofed/x86_64/cray_ari_s/include/linux/compat-2.6.h:7:0, [ 128s] from /home/abuild/rpmbuild/BUILD/cray-lustre/lnet/klnds/o2iblnd/o2iblnd.h:67, [ 128s] from /home/abuild/rpmbuild/BUILD/cray-lustre/lnet/klnds/o2iblnd/o2iblnd.c:42: [ 128s] /usr/src/kernel-modules-ofed/x86_64/cray_ari_s/include/linux/../../compat/config.h:401:0: error: "PACKAGE_NAME" redefined [-Werror] [ 128s] #define PACKAGE_NAME "compat_ofa" [ 128s] ^ [ 128s] In file included from <command-line>:0:0: [ 128s] /home/abuild/rpmbuild/BUILD/cray-lustre/config.h:561:0: note: this is the location of the previous definition [ 128s] #define PACKAGE_NAME "Lustre" [ 128s] ^ [ 128s] In file included from /usr/src/kernel-modules-ofed/x86_64/cray_ari_s/include/linux/compat-2.6.h:7:0, [ 128s] from /home/abuild/rpmbuild/BUILD/cray-lustre/lnet/klnds/o2iblnd/o2iblnd.h:67, [ 128s] from /home/abuild/rpmbuild/BUILD/cray-lustre/lnet/klnds/o2iblnd/o2iblnd.c:42: [ 128s] /usr/src/kernel-modules-ofed/x86_64/cray_ari_s/include/linux/../../compat/config.h:404:0: error: "PACKAGE_STRING" redefined [-Werror] [ 128s] #define PACKAGE_STRING "compat_ofa 1.0" [ 128s] ^ [ 128s] In file included from <command-line>:0:0: [ 128s] /home/abuild/rpmbuild/BUILD/cray-lustre/config.h:564:0: note: this is the location of the previous definition [ 128s] #define PACKAGE_STRING "Lustre LUSTRE_VERSION" [ 128s] ^ [ 128s] In file included from /usr/src/kernel-modules-ofed/x86_64/cray_ari_s/include/linux/compat-2.6.h:7:0, [ 128s] from /home/abuild/rpmbuild/BUILD/cray-lustre/lnet/klnds/o2iblnd/o2iblnd.h:67, [ 128s] from /home/abuild/rpmbuild/BUILD/cray-lustre/lnet/klnds/o2iblnd/o2iblnd.c:42: [ 128s] /usr/src/kernel-modules-ofed/x86_64/cray_ari_s/include/linux/../../compat/config.h:407:0: error: "PACKAGE_TARNAME" redefined [-Werror] [ 128s] #define PACKAGE_TARNAME "compat_ofa" [ 128s] ^ [ 128s] In file included from <command-line>:0:0: [ 128s] /home/abuild/rpmbuild/BUILD/cray-lustre/config.h:567:0: note: this is the location of the previous definition [ 128s] #define PACKAGE_TARNAME "lustre" [ 128s] ^ [ 128s] In file included from /usr/src/kernel-modules-ofed/x86_64/cray_ari_s/include/linux/compat-2.6.h:7:0, [ 128s] from /home/abuild/rpmbuild/BUILD/cray-lustre/lnet/klnds/o2iblnd/o2iblnd.h:67, [ 128s] from /home/abuild/rpmbuild/BUILD/cray-lustre/lnet/klnds/o2iblnd/o2iblnd.c:42: [ 128s] /usr/src/kernel-modules-ofed/x86_64/cray_ari_s/include/linux/../../compat/config.h:413:0: error: "PACKAGE_VERSION" redefined [-Werror] [ 128s] #define PACKAGE_VERSION "1.0" [ 128s] ^ [ 128s] In file included from <command-line>:0:0: [ 128s] /home/abuild/rpmbuild/BUILD/cray-lustre/config.h:573:0: note: this is the location of the previous definition [ 128s] #define PACKAGE_VERSION "LUSTRE_VERSION" [ 128s] ^
It seems OFED 3.18 now automatically generates a config.h in the same fashion that Lustre does, and these PACKAGE_* defines in the two config.h files are conflicting.